# embassy-rp-cyw43-poc

./: .gitignore  LICENSE  README.md
client/: Cargo.toml
client/src/: main.rs
firmware/: Cargo.toml  build.rs  config.toml.example
firmware/src/: main.rs
protocol/: Cargo.toml
protocol/src/: lib.rs
